Corrected spacing between containers to be even

--- a/attractions/style.css
+++ b/attractions/style.css
@@ -75,7 +75,7 @@ footer a:visited {
   align-items: center;
   position: relative;
   margin-bottom: 35px;
-  padding-bottom: 10px;
+  padding-bottom: 35px;
   border-bottom: 3px solid #003049;
 }
 
